--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Navigation -->
 <nav class = "navbar navbar-expand-md navbar-light bg-light sticky-top">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"><img src="img/coursera.png" alt="logo img"></a>
+		<img src="img/coursera.png" alt="logo img">
 
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
@@ -240,10 +240,10 @@
 	</div>
 
 	<div class="col-12 social padding">
-		<a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-		<a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-		<a href="https://www.instagram.com/instagram/"><i class="fab fa-instagram"></i></a>
-		<a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+		<a href="https://www.facebook.com/" aria-label="first link"><i class="fab fa-facebook"></i></a>
+		<a href="https://twitter.com/" aria-label="second link"><i class="fab fa-twitter"></i></a>
+		<a href="https://www.instagram.com/instagram/" aria-label="third link"><i class="fab fa-instagram"></i></a>
+		<a href="https://www.youtube.com/" aria-label="forth link"><i class="fab fa-youtube"></i></a>
 	</div>
 </div>
 </div>
