--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-			<img src="img/background.png" alt="background">
+			<img src="img/images.jpg" alt="background">
 			<div class="carousel-caption">
 				<h1 class="display-2">Bootstrap</h1>
 				<h3>Front-end framework</h3>
