--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 	<div class="carousel-inner">
 		<div class="carousel-item active">
 			<img src="img/image.jpg" alt="background">
-			<div class="carousel-caption">
-				<h1 class="display-2">Bootstrap</h1>
+			<div>
+				<h1>Bootstrap</h1>
 				<h3>Front-end framework</h3>
 			</div>
 		</div>
