--- a/index.html
+++ b/index.html
@@ -45,11 +45,7 @@
 
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-			
-  			<img src="img/image.jpg" alt="background">
-			<h1>Bootstrap</h1>
-			<h3>Front-end framework</h3>
-			
+  			<img src="img/bootstrap4.jpg" alt="background">
 		</div>
 		<div class="carousel-item">
 			<img src="img/background2.png" alt="background2">
