--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 	<div class="row padding">
 		<div class="col-lg-6">
 			<h2>Our Philosophy</h2>
-			<p>Embeded Google Calendar.</p>
+			<p>Embedded Google Calendar.</p>
 		</div>
 		<div class="col-lg-6">
 			<iframe src="https://calendar.google.com/calendar/embed?src=xingyuxiang183%40gmail.com&ctz=Asia%2FShanghai" style="border: 0" width="500" height="300"></iframe>
